Mise à jour via Notion Sync

--- a/Mes Notes (KIIP).html
+++ b/Mes Notes (KIIP).html
@@ -1,5 +1,7 @@
+<p><a href="https://script.google.com/macros/s/AKfycby9a9ae7XlJvd5R16Tj7JOlmmIuoP4ezsR54ZnqP_msYNwXnFaNZxtTzG2FbKsKIi7B/exec?pgid=2fe10121486880c8baa5cde6a7aadacf">https://script.google.com/macros/s/AKfycby9a9ae7XlJvd5R16Tj7JOlmmIuoP4ezsR54ZnqP_msYNwXnFaNZxtTzG2FbKsKIi7B/exec?pgid=2fe10121486880c8baa5cde6a7aadacf</a></p>
 <p> </p>
 <br />
+<p>Updated !</p>
 <h2>Mon titre (deux)</h2>
 <p>Hello !</p>
 <li>Jour du test : 2 heures de révision puis 2h d’examen</li>
