Mise à jour via Notion Sync

--- a/CMMC Project.html
+++ b/CMMC Project.html
@@ -1,4 +1,15 @@
 <h2>Databases Structures</h2>
+<h3>SSP Master</h3>
+<li>Plan Name</li>
+<li>System Boundary : text</li>
+<li>Operational Environment : text</li>
+<li>Information Types : relation</li>
+<li>External Connections : relation</li>
+<li>Responsabilities : people</li>
+<li>Approval Status : select</li>
+<li>Last Review Date : date</li>
+<li>Version : text</li>
+<li>Associated Objectives : relation</li>
 <h3>Remediation Action Plan</h3>
 <li>Name</li>
 <li>Type : select</li>
@@ -86,14 +97,3 @@
 <h3>CMMC Practice Report</h3>
 <li>Domain Code</li>
 <li>Full Report : formula</li>
-<li>Level Display : select</li>
-<li>Nb of Practices : number</li>
-<li>Domain Name : text</li>
-<li>Description : text</li>
-<li>All Practices : relation</li>
-<li>Objectives : formula</li>
-<li>has Practices? : formula</li>
-<li>Total of Practices : formula</li>
-<h3>CMMC Program Scope</h3>
-<li>Name</li>
-<li>Assets : relation</li>
