Mise à jour via Notion Sync

--- a/CMMC Project.html
+++ b/CMMC Project.html
@@ -1,4 +1,7 @@
 <h2>Databases Structures</h2>
+<div style="background-color: #f1f1f1; padding: 10px; border-radius: 5px; margin: 5px 0;">
+          💡 Cette page décrit la configuration actuelle du projet. Avec toutes les bases de données du Master template (template destiné aux Clients) et leurs propriétés respectives
+        </div>
 <h3>SSP Master</h3>
 <li>Plan Name</li>
 <li>System Boundary : text</li>
@@ -96,4 +99,3 @@
 <li>Status : select</li>
 <h3>CMMC Practice Report</h3>
 <li>Domain Code</li>
-<li>Full Report : formula</li>
